--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "twitter-telegram-bot",
-  "version": "1.0.0",
-  "description": "A bot to monitor Twitter and send messages to Telegram",
+  "name": "twitter-to-social-platforms-bot",
+  "version": "1.0.1",
+  "description": "A bot to monitor Twitter and send messages to Telegram, Discord",
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "npm install --save-dev @types/node @types/dotenv",
@@ -16,6 +16,7 @@
   "dependencies": {
     "cli-progress": "^3.12.0",
     "dayjs": "^1.11.13",
+    "discord.js": "^14.14.1",
     "dotenv": "^10.0.0",
     "ora": "^8.0.1",
     "telegraf": "^4.16.3",
@@ -26,7 +27,7 @@
     "@types/cli-progress": "^3.11.5",
     "@types/dotenv": "^8.2.3",
     "@types/node": "^20.17.11",
-    "typescript": "^4.5.4"
+    "typescript": "~5.0.4"
   },
   "author": "",
   "license": "ISC"
