--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,17 @@
     "compilerOptions": {
       "target": "ES2020",
       "module": "commonjs",
+      "lib": ["ES2020"],
+      "outDir": "./dist",
+      "rootDir": "./src",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true,
+      "skipDefaultLibCheck": true,
       "forceConsistentCasingInFileNames": true,
-      "outDir": "./dist",
-      "rootDir": "./src",
       "resolveJsonModule": true
     },
-    "include": ["src/**/*.ts"],
-    "exclude": ["node_modules", "**/*.test.ts"]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist"]
   }
   
