--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "twitter-to-social-platforms-bot",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A bot to monitor Twitter and send messages to Telegram, Discord",
   "main": "dist/index.js",
   "scripts": {
@@ -14,10 +14,12 @@
     "pm2:monitor": "pm2 monit twitter-telegram-bot"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "cli-progress": "^3.12.0",
     "dayjs": "^1.11.13",
     "discord.js": "^14.14.1",
     "dotenv": "^10.0.0",
+    "instagram-graph-api": "^7.0.0",
     "ora": "^8.0.1",
     "telegraf": "^4.16.3",
     "tslog": "^4.9.3",
@@ -26,7 +28,7 @@
   "devDependencies": {
     "@types/cli-progress": "^3.11.5",
     "@types/dotenv": "^8.2.3",
-    "@types/node": "^20.17.11",
+    "@types/node": "^20.17.12",
     "typescript": "~5.0.4"
   },
   "author": "",
