--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A bot to monitor Twitter and send messages to Telegram, Discord",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "npm install --save-dev @types/node @types/dotenv",
     "build": "tsc",
     "start": "node dist/index.js",
+    "test:reddit": "ts-node src/tests/reddit.test.ts",
+    "test:instagram": "ts-node src/tests/instagram.test.ts",
     "pm2:start": "pm2 start ecosystem.config.js",
     "pm2:stop": "pm2 stop ecosystem.config.js",
     "pm2:restart": "pm2 restart ecosystem.config.js",
@@ -29,6 +30,7 @@
     "@types/cli-progress": "^3.11.5",
     "@types/dotenv": "^8.2.3",
     "@types/node": "^20.17.12",
+    "ts-node": "^10.9.2",
     "typescript": "~5.0.4"
   },
   "author": "",
