--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "test:reddit": "ts-node src/tests/reddit.test.ts",
-    "test:instagram": "ts-node src/tests/instagram.test.ts"
+    "test:instagram": "ts-node src/tests/instagram.test.ts",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop ecosystem.config.js",
+    "pm2:restart": "pm2 restart ecosystem.config.js",
+    "pm2:logs": "pm2 logs twitter-to-social-platforms-bot",
+    "pm2:monitor": "pm2 monit twitter-to-social-platforms-bot"
   },
   "dependencies": {
     "axios": "^1.7.9",
